syntax = "proto3";

option csharp_namespace = "FolhaServiceGRPC";

package folhaservicegrpc;

// The greeting service definition.
service FolhaServiceStatus {
  // Sends a greeting
  rpc GetStatus (FolhaServiceStatusRequest) returns (FolhaServiceStatusResponse);
}

// The request message containing the user's name.
message FolhaServiceStatusRequest {
  string cpf = 1;
}

// The response message containing the greetings.
message FolhaServiceStatusResponse {
  string status = 1;
}
